--- a/src/CoverPreview.css
+++ b/src/CoverPreview.css
@@ -1,9 +1,12 @@
-.app {
-  margin: 0;
-  padding: 0;
+.cover-prev {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 100vw;
+}
+
+p {
+  font-size: 1em;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
