--- a/src/Header.css
+++ b/src/Header.css
@@ -5,7 +5,7 @@ header {
   height: 10vh;
   text-align: center;
   color: white;
-  background-color: #119892;
+  background-color: #1db954;
   font-size: 2.5em;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
