--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f8f9f9;
+  background-color: #202121;
 }
