--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,8 +4,7 @@ header {
   width: 100%;
   height: 10vh;
   text-align: center;
-  color: white;
-  background-color: #1db954;
+  color: #fff;
   font-size: 2.5em;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
