--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,7 +4,7 @@ header {
   width: 100%;
   height: 10vh;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   font-size: 2.5em;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
