Added form functionality

--- a/src/styles/InputBox.css
+++ b/src/styles/InputBox.css
@@ -27,7 +27,8 @@ input {
   opacity: 1; /* Firefox */
 }
 
-button {
+button,
+#button {
   width: 80%;
   height: 40px;
   background-color: #191414;
