--- a/src/styles/InputBox.css
+++ b/src/styles/InputBox.css
@@ -23,7 +23,9 @@ input {
   font-weight: 400;
 }
 ::placeholder {
-  color: #fff;
+  /*color: #fff;*/
+  color: rgba(255, 255, 255, 0.8);
+
   opacity: 1; /* Firefox */
 }
 
