--- a/src/styles/InputBox.css
+++ b/src/styles/InputBox.css
@@ -21,6 +21,7 @@ input {
   font-size: 1em;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+  margin-bottom: 3%;
 }
 ::placeholder {
   color: rgba(255, 255, 255, 0.4);
