--- a/src/styles/InputBox.css
+++ b/src/styles/InputBox.css
@@ -6,8 +6,6 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  margin-top: 5%;
-  margin-bottom: 5%;
 }
 
 input {
@@ -40,4 +38,5 @@ button,
   font-size: 1.5em;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+  margin-bottom: 0px;
 }
