--- a/src/styles/CoverPreview.css
+++ b/src/styles/CoverPreview.css
@@ -26,8 +26,8 @@ a {
 img {
   width: 300px;
   height: 300px;
-  object-fit: cover;
-  filter: brightness(0.75);
+  /*object-fit: cover;
+  filter: brightness(0.75);*/
 }
 .caption-text {
   position: absolute;
@@ -39,4 +39,9 @@ img {
   font-size: 36px;
   font-family: "Poppins", sans-serif;
   text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.75);
+}
+
+#cover-wrapper {
+  height: 300px;
+  width: 300px;
 }
